kubernetes/apps/plantuml/plantuml/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plantuml
  namespace: plantuml
  labels:
    app: plantuml
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plantuml
  template:
    metadata:
      labels:
        app: plantuml
    spec:
      restartPolicy: Always
      containers:
        - name: plantuml
          image: plantuml/plantuml-server:jetty-v1.2021.7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 1Gi
              cpu: 500m
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
