kubernetes/apps/plantuml/plantuml/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plantuml
  namespace: plantuml
  labels:
    app: plantuml
spec:
  type: ClusterIP
  selector:
    app: plantuml
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
