kubernetes/apps/plantuml/plantuml/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plantuml
  namespace: plantuml
spec:
  hostnames:
    - plantuml.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: plantuml
          namespace: plantuml
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
